--- a/META.yml
+++ b/META.yml
@@ -21,6 +21,7 @@ no_index:
 requires:
   perl: 5.10.0
 resources:
+  homepage: http://github.com/ingydotnet/perl5-pm/tree
   license: http://dev.perl.org/licenses/
   repository: git://github.com/ingydotnet/perl5-pm.git
-version: 0.03
+version: 0.04
