--- a/META.yml
+++ b/META.yml
@@ -19,10 +19,11 @@ no_index:
     - inc
     - t
 requires:
+  Hook::LexWrap: 0.24
   perl: 5.10.0
   version: 0.77
 resources:
   homepage: http://github.com/ingydotnet/perl5-pm/tree
   license: http://dev.perl.org/licenses/
   repository: git://github.com/ingydotnet/perl5-pm.git
-version: 0.05
+version: 0.06
