Import of INGY/perl5-0.07.tar.gz from CPAN.
gitpan-cpan-distribution: perl5
gitpan-cpan-version:      0.07
gitpan-cpan-path:         INGY/perl5-0.07.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Use a Bunch of Modules in One Go'
+abstract: 'Use a Perl 5 group of modules/features'
 author:
   - 'Ingy döt Net <ingy@ingy.net>'
 build_requires:
@@ -26,4 +26,4 @@ resources:
   homepage: http://github.com/ingydotnet/perl5-pm/tree
   license: http://dev.perl.org/licenses/
   repository: git://github.com/ingydotnet/perl5-pm.git
-version: 0.06
+version: 0.07
