--- a/META.yml
+++ b/META.yml
@@ -1,32 +1,30 @@
 ---
 abstract: 'Use a Perl 5 group of modules/features'
 author:
-  - 'Ingy döt Net <ingy@ingy.net>'
-build_requires:
-  ExtUtils::MakeMaker: 6.59
+  - 'Ingy döt Net <you@your.name>'
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.59
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+  ExtUtils::MakeMaker: '6.30'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-module_name: perl5
+  version: '1.4'
 name: perl5
 no_index:
   directory:
     - inc
     - t
+    - xt
+    - example
+recommends:
+  perl5::i: '0'
 requires:
-  perl: 5.10.0
-  version: 0.99
+  perl: v5.8.1
+  version: '0.99'
 resources:
-  homepage: https://github.com/ingydotnet/perl5-pm/tree
-  license: http://dev.perl.org/licenses/
-  repository:
-    type: git
-    url: git://github.com/ingydotnet/perl5-pm.git
-    web: https://github.com/ingydotnet/perl5-pm/tree
-version: 0.09
+  bugtracker: https://github.com/ingydotnet/perl5-pm/issues
+  homepage: https://github.com/ingydotnet/perl5-pm
+  repository: https://github.com/ingydotnet/perl5-pm.git
+version: '0.10'
