--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,8 @@
 abstract: 'Use a Perl 5 group of modules/features'
 author:
   - 'Ingy döt Net <you@your.name>'
-build_requires: {}
+build_requires:
+  Module::Runtime: '0'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
@@ -27,4 +28,4 @@ resources:
   bugtracker: https://github.com/ingydotnet/perl5-pm/issues
   homepage: https://github.com/ingydotnet/perl5-pm
   repository: https://github.com/ingydotnet/perl5-pm.git
-version: '0.11'
+version: '0.12'
