--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,8 @@ author:
   - 'Ingy döt Net <you@your.name>'
 build_requires:
   Module::Runtime: '0'
+  Sub::Exporter: '0'
+  Test::Exception: '0'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
@@ -28,4 +30,4 @@ resources:
   bugtracker: https://github.com/ingydotnet/perl5-pm/issues
   homepage: https://github.com/ingydotnet/perl5-pm
   repository: https://github.com/ingydotnet/perl5-pm.git
-version: '0.12'
+version: '0.13'
