--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Use a Perl 5 group of modules/features'
 author:
-  - 'Ingy döt Net <you@your.name>'
+  - 'Ingy döt Net <ingy@cpan.org>'
 build_requires:
   Module::Runtime: '0'
   Sub::Exporter: '0'
@@ -30,4 +30,4 @@ resources:
   bugtracker: https://github.com/ingydotnet/perl5-pm/issues
   homepage: https://github.com/ingydotnet/perl5-pm
   repository: https://github.com/ingydotnet/perl5-pm.git
-version: '0.13'
+version: '0.14'
